--- a/src/templates/pages/kontact-obr.pug
+++ b/src/templates/pages/kontact-obr.pug
@@ -55,66 +55,67 @@ block content
 
         .cont-block__wrap 
             .cont-block.cont-block_mb70
-                table.cont-table
-                    thead
-                        tr
-                            td Тема обращения
-                            td.center  Дата
-                            td.center  Стату
-                    tbody
-                        tr.active
-                            td У меня не работает счетчик ХВС, но меня это устраивает. Законно ли...
-                            td.center  26.04.2020
-                            td
-                                .state
-                                    .small-icon_ok
-                                        svg(width="14", height="14")
-                                            use(xlink:href="./assets/images/sprite.svg#icon-ок")                                
-                                    span В работе
-                        tr
-                            td Можно ли принять квартиру по рукописной доверенности?
-                            td.center  15.01.2020
-                            td
-                                .state
-                                    .small-icon_time
-                                        svg(width="14", height="14")
-                                            use(xlink:href="./assets/images/sprite.svg#icon-time")                                
-                                    span Решено
-                        tr
-                            td
-                                .name Убежала собака, но её поймали ваши рабочие, и не отдают. См. фото!!!
-                                    a(href="#").small-icon_clip
-                                        svg(width="14", height="14")
-                                            use(xlink:href="./assets/images/sprite.svg#icon-clip")                                
-                            td.center  01.08.2019
-                            td
-                                .state
-                                    .small-icon_time
-                                        svg(width="14", height="14")
-                                            use(xlink:href="./assets/images/sprite.svg#icon-time")                                
-                                    span Решено
-                        tr
-                            td Успею ли я принять квартиру за 7 минут? Тороплюсь на самолет.
-                            td.center  18.05.2019
-                            td
-                                .state
-                                    .small-icon_cross
-                                        svg(width="14", height="14")
-                                            use(xlink:href="./assets/images/sprite.svg#icon-cross")                                
-                                    span Закрыто
-                        tr
-                            td
-                                .name Пристает сосед (видео во вложении). Куда звонить, чтобы не приставал?
-                                    a(href="#").small-icon_clip
-                                        svg(width="14", height="14")
-                                            use(xlink:href="./assets/images/sprite.svg#icon-clip")                                
-                            td.center  21.01.2019
-                            td
-                                .state
-                                    .small-icon_cross
-                                        svg(width="14", height="14")
-                                            use(xlink:href="./assets/images/sprite.svg#icon-cross")                                
-                                    span Закрыто
+                .cont-block__table-wrap
+                    table.cont-table
+                        thead
+                            tr
+                                td Тема обращения
+                                td.center  Дата
+                                td.center  Стату
+                        tbody
+                            tr.active
+                                td У меня не работает счетчик ХВС, но меня это устраивает. Законно ли...
+                                td.center  26.04.2020
+                                td
+                                    .state
+                                        .small-icon_ok
+                                            svg(width="14", height="14")
+                                                use(xlink:href="./assets/images/sprite.svg#icon-ок")                                
+                                        span В работе
+                            tr
+                                td Можно ли принять квартиру по рукописной доверенности?
+                                td.center  15.01.2020
+                                td
+                                    .state
+                                        .small-icon_time
+                                            svg(width="14", height="14")
+                                                use(xlink:href="./assets/images/sprite.svg#icon-time")                                
+                                        span Решено
+                            tr
+                                td
+                                    .name Убежала собака, но её поймали ваши рабочие, и не отдают. См. фото!!!
+                                        a(href="#").small-icon_clip
+                                            svg(width="14", height="14")
+                                                use(xlink:href="./assets/images/sprite.svg#icon-clip")                                
+                                td.center  01.08.2019
+                                td
+                                    .state
+                                        .small-icon_time
+                                            svg(width="14", height="14")
+                                                use(xlink:href="./assets/images/sprite.svg#icon-time")                                
+                                        span Решено
+                            tr
+                                td Успею ли я принять квартиру за 7 минут? Тороплюсь на самолет.
+                                td.center  18.05.2019
+                                td
+                                    .state
+                                        .small-icon_cross
+                                            svg(width="14", height="14")
+                                                use(xlink:href="./assets/images/sprite.svg#icon-cross")                                
+                                        span Закрыто
+                            tr
+                                td
+                                    .name Пристает сосед (видео во вложении). Куда звонить, чтобы не приставал?
+                                        a(href="#").small-icon_clip
+                                            svg(width="14", height="14")
+                                                use(xlink:href="./assets/images/sprite.svg#icon-clip")                                
+                                td.center  21.01.2019
+                                td
+                                    .state
+                                        .small-icon_cross
+                                            svg(width="14", height="14")
+                                                use(xlink:href="./assets/images/sprite.svg#icon-cross")                                
+                                        span Закрыто
                 
                 .data-button-wrap
                     button(type="submit").button Написать нам
