--- a/src/templates/pages/moi-pokupki.pug
+++ b/src/templates/pages/moi-pokupki.pug
@@ -366,39 +366,40 @@ block content
             .cont-block.cont-block_mb70
                 h2.cont-block__h Взаиморасчеты по договору
 
-                table.cont-table
-                    thead
-                        tr
-                            td.center Дата
-                            td.center Начислено, р.
-                            td.center Оплата, р.
-                            td.center Остаток, р.
-                    tbody
-                        tr.active
-                            td.center 12.03.2020
-                            td.center 2 260 000
-                            td.center 80 000
-                            td.center 2 180 000
-                        tr.active
-                            td.center 12.03.2020
-                            td.center 2 260 000
-                            td.center 80 000
-                            td.center 2 180 000
-                        tr.active
-                            td.center 12.03.2020
-                            td.center 2 260 000
-                            td.center 80 000
-                            td.center 2 180 000
-                        tr.active
-                            td.center 12.03.2020
-                            td.center 2 260 000
-                            td.center 80 000
-                            td.center 2 180 000
-                        tr.active
-                            td.center 12.03.2020
-                            td.center 2 260 000
-                            td.center 80 000
-                            td.center 2 180 000
+                .cont-block__table-wrap
+                    table.cont-table
+                        thead
+                            tr
+                                td.center Дата
+                                td.center Начислено, р.
+                                td.center Оплата, р.
+                                td.center Остаток, р.
+                        tbody
+                            tr.active
+                                td.center 12.03.2020
+                                td.center 2 260 000
+                                td.center 80 000
+                                td.center 2 180 000
+                            tr.active
+                                td.center 12.03.2020
+                                td.center 2 260 000
+                                td.center 80 000
+                                td.center 2 180 000
+                            tr.active
+                                td.center 12.03.2020
+                                td.center 2 260 000
+                                td.center 80 000
+                                td.center 2 180 000
+                            tr.active
+                                td.center 12.03.2020
+                                td.center 2 260 000
+                                td.center 80 000
+                                td.center 2 180 000
+                            tr.active
+                                td.center 12.03.2020
+                                td.center 2 260 000
+                                td.center 80 000
+                                td.center 2 180 000
 
         .cont-block__wrap 
             .cont-block.cont-block_mb70
