--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -679,6 +679,21 @@ body.dark .button-zoom svg {
     .login-form__bottom-resend:disabled > svg {
       --icon-color: var(--color-border); }
 
+@media screen and (max-width: 768px) {
+  .login {
+    width: calc(100% - 32px);
+    padding: 30px 16px 40px; }
+  .login__main-logo {
+    margin-bottom: 30px; }
+  .login-form__h {
+    font-size: 21px;
+    line-height: 120%;
+    margin-bottom: 30px; }
+  .login-form__bottom-wrap {
+    flex-direction: column; }
+  .login-form__bottom-resend {
+    margin-bottom: 20px; } }
+
 .main-slider {
   width: 100%;
   height: 350px;
@@ -882,6 +897,47 @@ body.dark .news-block__linc:hover {
   font-size: 16px;
   line-height: 21px;
   color: var(--color-main-text); }
+
+@media screen and (max-width: 1023px) {
+  .main-nav__list {
+    grid-template-columns: 1fr 1fr; }
+  .news-block {
+    grid-template-columns: 1fr; } }
+
+@media screen and (max-width: 767px) {
+  .main-nav__list {
+    grid-template-columns: 1fr; }
+  .news-block__linc {
+    grid-template-columns: 1fr; }
+  .news-block__img {
+    max-height: 200px; }
+  .main-slider {
+    min-height: 300px;
+    height: 100%; }
+  .main-slider__text {
+    font-size: 22px;
+    line-height: 130%;
+    text-align: center; }
+  .main-slider__content-right {
+    display: none; }
+  .main-slider .swiper-slide {
+    grid-template-columns: 1fr; }
+  .main-slider__content {
+    order: 2;
+    padding: 16px;
+    padding-bottom: 50px; }
+  .main-slider__img {
+    order: 1; }
+  .main-slider__button {
+    width: 100%; }
+  .main-slider__button-wrap {
+    bottom: 5px;
+    left: 50%;
+    transform: translateX(-50%); }
+  .button-next {
+    justify-self: flex-end; }
+  .main-nav-linc__icon {
+    margin-bottom: 30px; } }
 
 .bron-card {
   width: 100%;
@@ -1193,6 +1249,54 @@ body.dark .news-block__linc:hover {
 .bron-progres.active .bron-progres__button svg {
   transform: translate(-50%, -50%) rotate(-90deg); }
 
+@media screen and (max-width: 767px) {
+  .bron-card {
+    grid-template-columns: 1fr; }
+  .bron-card-info {
+    width: 100%; }
+  .bron-card-info__options-item:first-of-type span:last-of-type {
+    text-align: right; }
+  .bron-card-nav {
+    grid-template-rows: initial;
+    grid-auto-flow: column;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+    overflow-x: scroll; }
+    .bron-card-nav > *:last-child {
+      display: flex; }
+      .bron-card-nav > *:last-child::after {
+        display: block;
+        content: '';
+        width: 4px;
+        height: 4px; }
+  .bron-card-nav__button-tab {
+    white-space: nowrap; }
+  .bron-card-nav__button-tab > span {
+    -ms-writing-mode: lr-tb;
+        writing-mode: horizontal-tb; }
+  .bron-card-body__back-img {
+    height: 65px; }
+  .bron-progres-linc, .bron-progres {
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+    padding: 20px 16px;
+    margin-bottom: 50px; }
+  .bron-progres-linc__text {
+    font-size: 14px; }
+  .bron-progres__body {
+    grid-template-columns: 1fr; }
+  .bron-progres__list:first-of-type .bron-progres__item:last-child::after {
+    bottom: 0; }
+  .bron-progres__list:last-of-type .bron-progres__item:first-child::after {
+    top: 0; }
+  .bron-progres__item {
+    padding: 16px 0 16px 16px; }
+  .bron-progres__item.active {
+    width: 75%;
+    left: 15px; }
+  .bron-progres.active .bron-progres__item.active {
+    width: 100%; } }
+
 .data-header {
   background-color: var(--color-dop-back);
   border-radius: 3px;
@@ -1278,6 +1382,23 @@ body.dark .news-block__linc:hover {
   grid-auto-flow: column;
   grid-column-gap: 24px; }
 
+@media screen and (max-width: 767px) {
+  .data-header {
+    padding: 20px; }
+  .data-header__icon {
+    min-width: 60px; }
+  .data-header__h {
+    font-size: 20px;
+    line-height: 130%; }
+  .data-input-block {
+    grid-template-columns: 1fr; }
+  .data-checkbox-block {
+    grid-template-columns: 1fr; } }
+
+@media screen and (max-width: 500px) {
+  .data-switch-block__text {
+    font-size: 14px; } }
+
 .help-faq {
   border: 1px solid var(--color-border);
   border-radius: 5px; }
@@ -1328,6 +1449,13 @@ body.dark .news-block__linc:hover {
     font-size: 16px;
     line-height: 21px;
     color: var(--color-main-text); }
+
+@media screen and (max-width: 767px) {
+  .help-faq-item__head {
+    padding: 12px 16px; }
+  .help-faq-item__button {
+    min-width: 20px;
+    margin-left: 10px; } }
 
 .download-list__input-wrap {
   display: grid;
@@ -1383,6 +1511,10 @@ body.dark .news-block__linc:hover {
 .linc-arrow__icon_down svg {
   transform: translate(-50%, -50%) rotate(90deg); }
 
+@media screen and (max-width: 767px) {
+  .download-list__item {
+    padding: 12px 16px; } }
+
 .schema-regist {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -1427,6 +1559,21 @@ body.dark .news-block__linc:hover {
     font-weight: 500;
     text-decoration: none; }
 
+@media screen and (max-width: 1023px) {
+  .schema-regist {
+    grid-template-columns: 1fr 1fr; } }
+
+@media screen and (max-width: 767px) {
+  .schema-regist {
+    grid-template-columns: 1fr; }
+  .schema-regist__icon {
+    width: 50px;
+    height: 50px;
+    margin-right: 16px; }
+    .schema-regist__icon svg {
+      width: 30px;
+      height: 30px; } }
+
 .apart-card {
   padding: 30px;
   border: 1px solid var(--color-border);
@@ -1461,7 +1608,8 @@ body.dark .news-block__linc:hover {
   line-height: 17px; }
 
 .apart-card__name {
-  color: var(--color-dop); }
+  color: var(--color-dop);
+  margin-bottom: 6px; }
 
 .apart-card__value {
   font-weight: 500; }
@@ -1635,7 +1783,7 @@ body.dark .news-block__linc:hover {
 
 .card-tab-controll__wrap {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: column;
   grid-gap: 24px; }
 
 .card-tab-controll {
@@ -1715,6 +1863,7 @@ body.dark .pers-docs__linc:hover {
   display: block;
   position: relative;
   width: 40px;
+  min-width: 40px;
   height: 40px;
   border-radius: 40px;
   border: 2px solid var(--color-main);
@@ -1862,3 +2011,125 @@ body.dark .progress-slider__thumbs::after {
      object-fit: cover;
   width: 320px;
   height: 250px; }
+
+@media screen and (max-width: 1200px) {
+  .plus-dop__wrap {
+    grid-template-columns: 1fr; } }
+
+@media screen and (max-width: 1023px) {
+  .card-tab-controll__img {
+    margin-right: 20px; }
+  .pers-docs__wrap {
+    grid-template-columns: 1fr 1fr; } }
+
+@media screen and (max-width: 767px) {
+  .card-tab-controll {
+    padding: 12px 20px; }
+  .card-tab-controll__wrap {
+    grid-auto-flow: row; }
+  .pers-docs__wrap {
+    grid-template-columns: 1fr; }
+  .cont-block__table-wrap {
+    overflow-x: scroll;
+    padding: 1px; }
+  .cont-table {
+    min-width: 600px; }
+  .state span {
+    white-space: nowrap; }
+  .building-progress__input-wrap {
+    overflow-x: scroll;
+    padding-bottom: 15px;
+    margin-bottom: 15px; }
+  .progress-slider {
+    height: 350px; }
+  .progress-slider__wrap {
+    grid-template-columns: 1fr; }
+  .progress-slider__thumbs {
+    display: none; }
+  .apart-card {
+    flex-direction: column;
+    padding: 16px; }
+  .apart-card__img {
+    margin-right: 0; }
+  .apart-card__options-wrap {
+    grid-auto-flow: inherit;
+    grid-template-columns: repeat(3, 1fr);
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+    row-gap: 20px; }
+  .button-text-wrap {
+    grid-template-columns: 1fr;
+    grid-auto-flow: inherit; }
+  .button-text-wrap__text {
+    order: 2;
+    margin-right: 0;
+    margin-top: 12px; }
+  .contact-icon {
+    flex-direction: column;
+    align-items: flex-start; }
+  .contact-icon__info-wrap {
+    grid-auto-flow: row;
+    -moz-column-gap: 20px;
+         column-gap: 20px; }
+  .contact-icon__icon {
+    margin-right: 0;
+    margin-bottom: 20px; }
+  .plus-dop {
+    flex-direction: column; }
+  .plus-dop__img {
+    width: 100%;
+    order: 1; }
+  .plus-dop__body {
+    order: 2;
+    padding: 16px; }
+  .plus-dop__name {
+    margin-bottom: 15px; } }
+
+@media screen and (max-width: 319px) {
+  .card-tab-controll {
+    flex-direction: column;
+    align-items: center; } }
+
+@media screen and (max-width: 1023px) {
+  .input-radio-wrap__input_more {
+    grid-auto-flow: initial;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 20px; } }
+
+@media screen and (max-width: 768px) {
+  .cont-block__h1 {
+    font-size: 22px;
+    line-height: 130%; }
+  .cont-block__h {
+    font-size: 22px;
+    line-height: 130%; }
+  .input .input__input {
+    padding: 14px 10px; }
+  .tel-country {
+    width: 70px; }
+  .tel-country__img {
+    right: 12px; }
+  .input-radio-wrap__input_more {
+    grid-auto-flow: row;
+    grid-template-columns: initial;
+    row-gap: 20px; }
+  .input-radio-wrap__input_more-inside {
+    grid-auto-flow: initial;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 20px;
+    justify-items: flex-start; }
+  .nps-poll__button-warp {
+    flex-direction: column; }
+  .nps-poll__button-text {
+    margin-left: 0;
+    margin-top: 20px; } }
+
+@media screen and (max-width: 300px) {
+  .input .input__input {
+    font-size: 13px; }
+  .tel-country {
+    width: 60px; }
+  .tel-country__select-arrow {
+    left: 13px; }
+  .tel-country__img {
+    right: 10px; } }
