--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -70,7 +70,7 @@ $content-padding: 0 16px;
 	display: block;
 	position: relative;
 	width: 100%;
-	height: 100%;
+	align-self: stretch;
 	object-fit: cover;
 }
 
@@ -243,7 +243,7 @@ body.dark {
 	display: block;
 	width: 100%;
 	min-height: 210px;
-	height: 100%;
+	align-self: stretch;
 	object-fit: cover;
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
@@ -275,7 +275,7 @@ body.dark {
 	.main-nav__list {
 		grid-template-columns: 1fr 1fr;
 	}
-	.news-block {
+	.news-block { 
 		grid-template-columns: 1fr;
 	}
 }
@@ -311,6 +311,7 @@ body.dark {
 		padding-bottom: 50px;
 	}
 	.main-slider__img {
+		max-height: 250px;
 		order: 1;
 	}
 	.main-slider__button {
