--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -12,6 +12,10 @@ block content
                     li 
                         a(href="login.html") Войти 
                     li 
+                        a(href="login-dop1.html") Главная - авторизация
+                    li 
+                        a(href="login-dop2.html") Главная - авторизация Новый пароль
+                    li 
                         a(href="main-page.html") Главная 
                     li 
                         a(href="broni.html") Мои брони и сделки 
