--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -2134,3 +2134,92 @@ body.dark .progress-slider__thumbs::after {
     left: 13px; }
   .tel-country__img {
     right: 10px; } }
+
+.login_dop__wrap {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 16px;
+  overflow-y: auto; }
+
+.login_dop {
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25); }
+  .login_dop .login {
+    position: static;
+    box-shadow: none;
+    top: 0;
+    left: 0;
+    transform: translate(0, 0);
+    max-width: 100%;
+    padding: 50px 94px;
+    width: 500px;
+    background-color: var(--color-dop-back);
+    border-radius: 0 5px 5px 0; }
+  .login_dop .login__main-logo {
+    margin-bottom: 32px; }
+
+.login_dop__wrap-img {
+  border-radius: 5px 0 0 5px; }
+
+.login-form__or {
+  margin-top: 6px;
+  display: flex;
+  align-items: center; }
+  .login-form__or::after, .login-form__or::before {
+    content: "";
+    display: block;
+    height: 1px;
+    background-color: var(--color-dop);
+    flex-grow: 1; }
+
+.login-form__or-text {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 26px;
+  color: var(--color-dop);
+  margin: 0 25px; }
+
+.login-form__bottom-wrap-dop {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.button_ghost {
+  color: var(--color-main);
+  background-color: transparent;
+  border: 1px solid var(--color-main);
+  transition: background 150ms ease-in-out 0ms; }
+  .button_ghost:hover {
+    background-color: var(--color-main);
+    color: #ffffff;
+    box-shadow: none; }
+
+.dark .button_ghost {
+  color: var(--color-main-text); }
+
+.login_dop_pas {
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  width: 100%;
+  max-width: 330px;
+  display: grid;
+  grid-row-gap: 24px; }
+
+.login_dop_pas__text {
+  padding: 18px 22px;
+  border-radius: 3px;
+  background-color: var(--color-dop-back);
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 21px;
+  color: var(--color-main-text); }
