--- a/src/styles/pages/login-dop.scss
+++ b/src/styles/pages/login-dop.scss
@@ -30,6 +30,7 @@ $content-padding: 0 16px;
 	transform: translate(-50%, -50%);
 	display: flex;
 	box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);
+	border-radius: 5px;
 
 	.login {
 		position: static;
@@ -107,7 +108,7 @@ $content-padding: 0 16px;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	display: flex;
-	width: 100%;
+	width: calc(100% - 24px);
 	max-width: 330px;
 	display: grid;
 	grid-row-gap: 24px;
@@ -121,4 +122,35 @@ $content-padding: 0 16px;
 	font-size: 16px;
 	line-height: 21px;
 	color: var(--color-main-text);
+}
+
+@media screen and (max-width: 850px) {
+	.login_dop__wrap-img {
+		display: none;
+	}
+
+	.login_dop .login {
+		border-radius: 5px;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.login_dop .login-form__bottom-resend {
+		order: 2;
+		margin-bottom: 0;
+		margin-top: 20px;
+	}
+	.login_dop .login-form__bottom-wrap > .button {
+		order: 1;
+	}
+}
+
+@media screen and (max-width: 580px) {
+	.login_dop {
+		width: calc(100% - 24px);
+	}
+	.login_dop .login {
+		padding: 30px 16px 40px;
+		width: 100%;
+	}
 }
