--- a/src/templates/pages/login-dop1.pug
+++ b/src/templates/pages/login-dop1.pug
@@ -48,3 +48,8 @@ block content
                         
                         .login-form__bottom-wrap-dop 
                             button(type="submit").button.button_ghost Зарегистрироваться
+
+            a(href="#").login_dop__linc-back 
+                svg(width="20  ", height="17").login_dop__linc-back-icon
+                    use(xlink:href="./assets/images/sprite.svg#icon-arrow-back")
+                .login_dop__linc-back-text Вернуться на сайт
