--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -14,6 +14,8 @@ block content
                     li 
                         a(href="login-dop1.html") Главная - авторизация
                     li 
+                        a(href="login-dop11.html") Главная - авторизация 2
+                    li 
                         a(href="login-dop2.html") Главная - авторизация Новый пароль
                     li 
                         a(href="main-page.html") Главная 
