--- a/src/styles/pages/login-dop.scss
+++ b/src/styles/pages/login-dop.scss
@@ -150,6 +150,11 @@ $content-padding: 0 16px;
 	line-height: 19px;
 }
 
+.login-form__bottom-center {
+	margin-right: auto;
+	margin-left: auto;
+}
+
 @media screen and (max-width: 850px) {
 	.login_dop__wrap-img {
 		display: none;
