--- a/src/templates/pages/login-dop11.pug
+++ b/src/templates/pages/login-dop11.pug
@@ -40,8 +40,7 @@ block content
                             .input__error Поле указано не верно
                         
                         .login-form__bottom-wrap
-                            <div></div>
-                            button(type="submit").button Зарегистрироваться
+                            button(type="submit").button.login-form__bottom-center Зарегистрироваться
                         
                         .login-form__or 
                             .login-form__or-text или
