prod Доступ в ЛК

--- a/src/templates/pages/my-data.pug
+++ b/src/templates/pages/my-data.pug
@@ -216,9 +216,6 @@ block content
                             input(type="checkbox", name="").input-switch__input
                             .input-switch__mimic
                 
-                .data-button-wrap
-                    button(type="submit").button Сохранить изменения
-
         .cont-block__wrap 
             .cont-block.cont-block_mb70
                 .data-header 
@@ -236,3 +233,8 @@ block content
                         .input__name Новый пароль (повторно)
                         input(type="password", name="", placeholder="Новый пароль (повторно)").input__input
                         .input__error Поле указано не верно
+
+        .cont-block__wrap 
+            .cont-block.cont-block_mb70                
+                .data-button-wrap
+                    button(type="submit").button Сохранить изменения
