--- a/src/templates/pages/kontact-obr.pug
+++ b/src/templates/pages/kontact-obr.pug
@@ -118,7 +118,7 @@ block content
                                         span Закрыто
                 
                 .data-button-wrap
-                    button(type="submit").button Написать нам
+                    button(data-active-control='pop1').button Написать нам
                 
         .cont-block__wrap 
             .cont-block.cont-block_mb70
@@ -128,4 +128,4 @@ block content
                             use(xlink:href="./assets/images/sprite.svg#icon-doc")
 
                 .data-button-wrap
-                    button(type="submit").button Написать нам
+                    button(data-active-control='pop1').button Написать нам
