--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -30,6 +30,8 @@ block content
                     li 
                         a(href="zapis-na-priem.html") Запись на прием квартиры
                     li 
+                        a(href="zapis-na-priem-2.html") Запись на прием квартиры 2
+                    li 
                         a(href="kontact-obr.html") Контакты и обращения
                     li 
                         a(href="nps.html") NPS опрос дольщиков со своим URL адресом
