--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -815,3 +815,4 @@ body.dark {
 @import "./pages/login-dop.scss";
 @import "./common/footer.scss";
 @import "./common/notyf.scss";
+@import "./common/notice.scss";
