--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -1,8 +1,38 @@
 header.header__wrap 
     .header
-        svg(width="96", height="35", data-logo)
+        svg(width="96" height="35", data-logo)
             use(xlink:href="./assets/images/sprite.svg#main-logo")
-        
-        label.input-switch
-            input(type="checkbox", name="")#switch-dark.input-switch__input
-            .input-switch__mimic
+
+        .header-icon-wrap
+            .notice
+                button.notice__button.message
+                    svg(width="30" height="30").notice__button-icon
+                        use(xlink:href="./assets/images/sprite.svg#icon-notification")
+                .notice-list__wrap.active 
+                    Ul.notice-list
+                        li.notice-list__item.active
+                            .notice-list__head Требуется доплата за метражи ПИБ
+                            .notice-list__date 2 июня 2021
+                        li.notice-list__item.active
+                            .notice-list__head Требуется доплата за метражи ПИБ
+                            .notice-list__date 2 июня 2021
+                        li.notice-list__item
+                            .notice-list__head Требуется доплата за метражи ПИБ
+                            .notice-list__date 2 июня 2021
+                        li.notice-list__item
+                            .notice-list__head Требуется доплата за метражи ПИБ
+                            .notice-list__date 2 июня 2021
+                        li.notice-list__item
+                            .notice-list__head Требуется доплата за метражи ПИБ
+                            .notice-list__date 2 июня 2021
+                        li.notice-list__item
+                            .notice-list__head Требуется доплата за метражи ПИБ
+                            .notice-list__date 2 июня 2021
+                        li.notice-list__item
+                            .notice-list__head Требуется доплата за метражи ПИБ
+                            .notice-list__date 2 июня 2021
+
+
+            label.input-switch
+                input(type="checkbox" name="")#switch-dark.input-switch__input
+                .input-switch__mimic
