--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -816,3 +816,4 @@ body.dark {
 @import "./common/footer.scss";
 @import "./common/notyf.scss";
 @import "./common/notice.scss";
+@import "./common/news-list.scss";
