--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -8,7 +8,7 @@ header.header__wrap
                 button.notice__button.message
                     svg(width="30" height="30").notice__button-icon
                         use(xlink:href="./assets/images/sprite.svg#icon-notification")
-                .notice-list__wrap.active 
+                .notice-list__wrap 
                     Ul.notice-list
                         li.notice-list__item.active
                             .notice-list__head Требуется доплата за метражи ПИБ
