--- a/docs/assets/styles/app.css
+++ b/docs/assets/styles/app.css
@@ -2528,3 +2528,73 @@ body.dark .progress-slider__thumbs::after {
   font-size: 14px;
   line-height: 19px;
   color: var(--color-dop); }
+
+.news-list {
+  display: grid;
+  grid-gap: 24px; }
+
+.news-list__linc {
+  --border-radius: 5px;
+  display: grid;
+  grid-template-columns: minmax(auto, 480px) 1fr;
+  grid-column-gap: 25px;
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  align-items: center;
+  text-decoration: none;
+  min-height: 250px; }
+
+.news-list__img {
+  display: block;
+  width: 100%;
+  height: 100%; }
+  .news-list__img > img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-top-left-radius: calc(var(--border-radius) - 1px);
+    border-bottom-left-radius: calc(var(--border-radius) - 1px); }
+
+.news-list__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 25px 25px 25px 0; }
+
+.news-list__date {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 21px;
+  color: var(--color-dop-text);
+  margin-bottom: 8px; }
+
+.news-list__h {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 25px;
+  margin: 0 0 18px;
+  color: var(--color-main-text); }
+
+.news-list__text > p {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+  color: var(--color-dop-text);
+  margin: 14px 0; }
+  .news-list__text > p:first-child {
+    margin-top: 0; }
+  .news-list__text > p:last-child {
+    margin-bottom: 0; }
+
+@media screen and (max-width: 960px) {
+  .news-list__linc {
+    grid-template-columns: 1fr; }
+  .news-list__img {
+    height: 200px; }
+    .news-list__img > img {
+      border-top-right-radius: calc(var(--border-radius) - 1px);
+      border-bottom-left-radius: 0; }
+  .news-list__body {
+    margin: 16px; } }
