--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -37,3 +37,5 @@ block content
                         a(href="kontact-obr.html") Контакты и обращения
                     li 
                         a(href="nps.html") NPS опрос дольщиков со своим URL адресом
+                    li 
+                        a(href="news.html") Новости
