--- a/src/styles/common/news-list.scss
+++ b/src/styles/common/news-list.scss
@@ -68,6 +68,13 @@ $content-padding: 0 16px;
 	color: var(--color-main-text);
 }
 
+.news-list__buttom-wrap {
+	margin-top: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 .news-list__text {
 	> p {
 		font-weight: 300;
