--- a/src/templates/pages/news.pug
+++ b/src/templates/pages/news.pug
@@ -47,3 +47,7 @@ block content
                                 h4.news-list__h ГК ФСК в Петербурге и УК СП-Сервис стали партнерами и какой-то детальный текст
                                 .news-list__text 
                                     p Жилой комплекс бизнес-класса в престижном Хорошёвском районе в окружении исторической сталинской застройки и статусных жилых комплексов. Это идеальное сочетание престижа района, авторской архитектуры,...
+
+
+                .news-list__buttom-wrap
+                    button.button.button_ghost Показать ещё
